[project]
name = "winipyside"
version = "2.7.1"
description = "A utilities package for PySide6"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cryptography>=49.0.0",
    "pyqt-toast-notification",
    "pyrig>=15.4.0",
    "pyside6",
    "winiutils",
]
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.scripts]
winipyside = "pyrig.rig.cli.main:main"

[project.urls]
Homepage = "https://github.com/Winipedia/winipyside"
Documentation = "https://Winipedia.github.io/winipyside"
Source = "https://github.com/Winipedia/winipyside"
Issues = "https://github.com/Winipedia/winipyside/issues"
Changelog = "https://github.com/Winipedia/winipyside/releases"

[dependency-groups]
dev = [
    "bandit>=1.9.3",
    "deptry>=0.25.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
    "pip-audit>=2.10.0",
    "prek>=0.3.2",
    "pyrig-dev",
    "pyrig-pypi>=1.0.1",
    "pytest-cov>=7.0.0",
    "pytest-qt>=4.5.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "rumdl>=0.1.18",
    "ty>=0.0.16",
    "types-defusedxml>=0.7.0.20250822",
    "types-tqdm>=4.67.3.20260205",
    "typos>=1.47.2",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff]
exclude = [
    "**/migrations/*.py",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D203",
    "D213",
    "COM812",
    "ANN401",
]
fixable = [
    "ALL",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101",
]

[tool.mypy]
strict = true
warn_unreachable = true
show_error_codes = true
files = "."

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = "--cov=winipyside --cov-branch --cov-report=term-missing --cov-fail-under=90"

[tool.ty.terminal]
error-on-warning = true

[tool.bandit.assert_used]
skips = [
    "*/tests/*.py",
    "*/test_*/*.py",
]

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig",
]
