[project]
name = "winipyside"
version = "4.1.6"
description = "A utilities package for PySide6"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "cryptography>=49.0.0",
    "pyqt-toast-notification>=1.3.3",
    "pyrig>=18.3.4",
    "pyrig-runtime>=3.5.2",
    "pyside6>=6.11.1",
    "winiutils>=4.1.3",
]
license-files = [
    "LICENSE",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = [
    "pyrig",
]

[[project.authors]]
name = "Winipedia"

[[project.maintainers]]
name = "Winipedia"

[project.scripts]
winipyside = "pyrig_runtime.rig.cli.main:main"

[project.urls]
Homepage = "https://github.com/Winipedia/winipyside"
Documentation = "https://Winipedia.github.io/winipyside"
Source = "https://github.com/Winipedia/winipyside"
Issues = "https://github.com/Winipedia/winipyside/issues"
Changelog = "https://github.com/Winipedia/winipyside/releases"

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "detect-secrets>=1.5.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocstrings[python]>=1.0.5",
    "pip-audit>=2.10.1",
    "prek>=0.4.8",
    "pyrig>=18.3.4",
    "pyrig-pypi>=3.1.2",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
    "ruff>=0.15.21",
    "rumdl>=0.2.30",
    "ty>=0.0.58",
    "types-defusedxml>=0.7.0.20260504",
    "types-tqdm>=4.68.0.20260608",
    "typos>=1.48.0",
]

[build-system]
requires = [
    "uv_build",
]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ANN401",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.pytest]
testpaths = [
    "tests",
]
addopts = [
    "--cov=winipyside",
    "--cov-branch",
    "--cov-fail-under=90",
    "--cov-report=term-missing:skip-covered",
]
filterwarnings = [
    "error",
]
strict = true

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
    "pyrig-runtime",
]
