[project]
name = "winipyside"
version = "4.14.1"
description = "A utilities package for PySide6"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = "MIT"
license-files = [
  "LICENSE",
]
authors = [
  { name = "Winipedia" },
]
maintainers = [
  { name = "Winipedia" },
]
keywords = [
  "pyrig",
]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "cryptography>=49.0.0",
  "pyqt-toast-notification>=1.3.3",
  "pyrig>=18.3.4",
  "pyrig-runtime>=3.5.2",
  "pyside6>=6.11.1",
  "winiutils>=4.1.3",
]

[project.urls]
Changelog = "https://github.com/Winipedia/winipyside/releases"
Documentation = "https://Winipedia.github.io/winipyside"
Homepage = "https://github.com/Winipedia/winipyside"
Issues = "https://github.com/Winipedia/winipyside/issues"
Source = "https://github.com/Winipedia/winipyside"

[project.scripts]
winipyside = "pyrig_runtime.rig.cli.main:main"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "deptry>=0.25.1",
  "detect-secrets>=1.5.0",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.7.6",
  "mkdocs-mermaid2-plugin>=1.2.3",
  "mkdocstrings[python]>=1.0.5",
  "pip-audit>=2.10.1",
  "pre-commit-hooks",
  "prek>=0.4.8",
  "pyrig>=18.3.4",
  "pyrig-pypi>=3.1.2",
  "pytest>=9.1.1",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest-qt>=4.5.0",
  "pytest-randomly",
  "ruff>=0.15.21",
  "rumdl>=0.2.30",
  "ryl",
  "shellcheck-py",
  "shfmt-py",
  "tombi",
  "ty>=0.0.58",
  "types-defusedxml>=0.7.0.20260504",
  "types-tqdm>=4.68.0.20260608",
  "typos>=1.48.0",
]

[build-system]
requires = [
  "uv-build",
  "uv_build",
]
build-backend = "uv_build"

[tool.deptry]
root = "src"

[tool.deptry.per_rule_ignores]
DEP002 = [
  "pyrig-runtime",
]

[tool.pytest]
addopts = [
  "--cov-branch",
  "--cov-fail-under=90",
  "--cov-report=term-missing:skip-covered",
  "--cov=winipyside",
]
filterwarnings = [
  "error",
]
strict = true
testpaths = [
  "tests",
]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "ALL",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
